cmake_minimum_required(VERSION 3.20)
project(Logistic_SPC)

set(CMAKE_CXX_STANDARD 14)

add_executable(Articulation_tops_undirected Undirected/Articulation_tops/Articulation_tops.cpp)
add_executable(Bridges_undirected Undirected/Bridges/Bridges.cpp)
add_executable(Components_undirected Undirected/Components/Components.cpp)
add_executable(Generator_undirected Testing/Generator/Generator_undirected.cpp)
add_executable(AUT_AL Testing/Undirected/AUT/AUT_AL.cpp)
add_executable(AUT_AM Testing/Undirected/AUT/AUT_AM.cpp)
add_executable(AUT_RL Testing/Undirected/AUT/AUT_RL.cpp)
add_executable(BUT_AL Testing/Undirected/BUT/BUT_AL.cpp)
add_executable(BUT_AM Testing/Undirected/BUT/BUT_AM.cpp)
add_executable(BUT_RL Testing/Undirected/BUT/BUT_RL.cpp)
add_executable(CUT_AL Testing/Undirected/CUT/CUT_AL.cpp)
add_executable(CUT_AM Testing/Undirected/CUT/CUT_AM.cpp)
add_executable(CUT_RL Testing/Undirected/CUT/CUT_RL.cpp)
add_executable(Memory_test Testing/Memory/Memory_test.cpp)
add_executable(Memory_windows Testing/Memory/Memory_windows.cpp)